--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             </div>
             <div class="project-card">
                 <div class="project-image">
-                    <img src="park.jpg" alt="Modern Industrial Park">
+                    <img src="Park.jpg" alt="Modern Industrial Park">
                 </div>
                 <h3>Industrial Park</h3>
                 <p>Efficient industrial space planning</p>
